SFDC Automation/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>ADDR_ID__c</fullName>
        <description>Needed for migration purposes.</description>
        <label>Address ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Capture_Date__c</fullName>
        <label>Account Capture Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Account_Classification__c</fullName>
        <label>Account Classification</label>
        <picklist>
            <picklistValues>
                <fullName>National</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coordinated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Coordinated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National - Cash Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local - Cash Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Cash and Non-Cash</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account_Complexity_Score__c</fullName>
        <description>Number indicating how complex the account is to manage. Serves as an indicator of level of effort that the sales person needs to dedicate to this account. This is not represented in any specific time unit but just relative weight. Scores typically go from 3 to 50</description>
        <inlineHelpText>No indicating how complex the acct is to manage. Serves as an indicator of level of effort that the sales person needs to dedicate to this acct. This is not represented in any specific time unit but just relative weight. Scores typically go from 3 to 50.</inlineHelpText>
        <label>Account Complexity Score</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <formula>CASE($RecordType.Name , &apos;Ryder FMS Parent Account&apos;, &apos;Parent&apos;, &apos;Ryder FMS Branch Account&apos;, &apos;Child&apos;,&apos;Ryder Pure Rental Account&apos;,&apos;Rental&apos;,&apos;&apos;)</formula>
        <label>Account Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Classifications__c</fullName>
        <label>Additional Classifications</label>
        <picklist>
            <picklistValues>
                <fullName>Enterprise Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enterprise Subsidiary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Growth Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MWBE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National Tag Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Profit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ODM Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ODM Target</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On-Site Target</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TCO Training Target</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Top 10</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Additional_Comments__c</fullName>
        <inlineHelpText>Place additional comments for service handling</inlineHelpText>
        <label>Additional Comments</label>
        <length>8000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Alias_Name__c</fullName>
        <description>Also know as name for accounts (1 OR More AKAs)</description>
        <label>Other Names</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>At_Risk_Status_Percent__c</fullName>
        <formula>IF(AND(RiskStatusAtRisk__c != 0, RiskStatusCBCount__c != 0), RiskStatusAtRisk__c / RiskStatusCBCount__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>At Risk Status %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>At_Risk__c</fullName>
        <defaultValue>false</defaultValue>
        <label>At Risk</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BAD_ADDRESS_BIT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bad Address Bit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BAD_ADDR_CD__c</fullName>
        <description>Flag used to mark an address as BAD</description>
        <label>Bad Address CD</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BAD_ADDR_DATE__c</fullName>
        <description>Date when the address was marked bad</description>
        <label>Bad Address Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BAD_ADDR_REASON__c</fullName>
        <description>Reason for marking an address BAD</description>
        <label>Bad Address Reason</label>
        <length>8000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BSNP_ID__c</fullName>
        <description>Prospect ID from SAM for newly created accounts</description>
        <label>BSNP ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BUSINESS_STATUS__c</fullName>
        <description>CURRENT OR TARGET BUSINESS (For customers with multiple locations).   Lookup tb_REF_CODE with ref_code_type &apos;LBS&apos; to the corr. reasons.</description>
        <label>Business Status</label>
        <picklist>
            <picklistValues>
                <fullName>Current</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Target Business</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Bargain_Hunter__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Non Migration field - updated via workflow to prevent users from changing this.</description>
        <label>Bargain Hunter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Billing_Fax__c</fullName>
        <description>Required for Credit</description>
        <label>Billing Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Billing_Phone__c</fullName>
        <description>Required for Credit</description>
        <label>Billing Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CO_ANNSRY__c</fullName>
        <description>Company Anniversary</description>
        <label>Inception Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CO_OWNER_ID__c</fullName>
        <label>Co Owner ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CO_RYDER_ANNSRY__c</fullName>
        <description>Ryder Customer Inception Date - ACS Tables</description>
        <label>Company Ryder Anniversary</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CO_SEGMENT__c</fullName>
        <description>RYDER Specific Company Segment, Lookup code from TB_REF_CODE, REF TYPE CODE = CMS.</description>
        <label>Market Segment</label>
        <picklist>
            <picklistValues>
                <fullName>0 - Three trucks or less</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>00 - Three Trucks or Less (Bargain Hunter)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 - Brgn hunters Med fl</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Cap builders Med fl</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Time-crit del Med fl</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Brgn hunters Low den fl</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5  - Cap bld Low den fl</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 - Time-crit del Low den fl</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7 -  Brgn hunters Lrg fl</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8 - Sophisticated 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9 - Sophisticated 2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CR_STATUS_REASON__c</fullName>
        <label>Risk Status Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CSA_Score__c</fullName>
        <label>CSA Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CUST_REPAIR_LIMIT__c</fullName>
        <description>Customer Repair Limit</description>
        <label>Customer Repair Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cell__c</fullName>
        <label>Cell</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Central_Decisionmaking__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select this if the sales decisions are made at the National / Parent Account level.</inlineHelpText>
        <label>Central Decisionmaking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CompanyTypeID__c</fullName>
        <label>Company Type</label>
        <picklist>
            <picklistValues>
                <fullName>1 Corporation</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>2 Sub S Corp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 Partnership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 Sole Proprietorship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 Tax Exempt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 Government Entity</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Company_Lead_Type__c</fullName>
        <label>Company Lead Type</label>
        <picklist>
            <picklistValues>
                <fullName>Company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Individual</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Components_Not_Included__c</fullName>
        <inlineHelpText>Describe any components not included in Service</inlineHelpText>
        <label>Components Not Included</label>
        <length>8000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Connection__IC_DoNotCall__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IC_DoNotCall</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Connection__IC_LastContact__c</fullName>
        <label>IC_LastContact</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Count_of_Accounts__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Count of Accounts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Credit_Rating__c</fullName>
        <label>Credit Rating</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustProspectID__c</fullName>
        <description>Customer Prospect ID</description>
        <externalId>true</externalId>
        <label>Customer Prospect ID</label>
        <length>15</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CustomerTypeID__c</fullName>
        <description>Customer type indicating FMS or RIL. Realtime update of both SFDC and RADAR whenever this value is changed in either system.      Question: Does RADAR care about this or any changes to this field?</description>
        <label>Customer Type</label>
        <picklist>
            <picklistValues>
                <fullName>FMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RIL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FMS Rental</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field indicates the customer who referred this account.</description>
        <label>Customer Referral Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Branch_rollup__c</fullName>
        <label>Customer Branch rollup</label>
        <summaryFilterItems>
            <field>Customer_Branch__c.Customer_Branch_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </summaryFilterItems>
        <summaryForeignKey>Customer_Branch__c.Ryder_HQ_Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>DBA_2__c</fullName>
        <description>Doing Business As 2</description>
        <inlineHelpText>Doing Business As 2</inlineHelpText>
        <label>DBA 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DBA_3__c</fullName>
        <inlineHelpText>Doing Business As 3</inlineHelpText>
        <label>DBA 3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DBA_4__c</fullName>
        <inlineHelpText>Doing Business As 4</inlineHelpText>
        <label>DBA 4</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DBA__c</fullName>
        <inlineHelpText>Doing Business As</inlineHelpText>
        <label>DBA</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DB_Loc_Type__c</fullName>
        <description>D&amp;B lassification of customer locations</description>
        <label>D&amp;B Location Type</label>
        <picklist>
            <picklistValues>
                <fullName>Branch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distribution Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Division</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Headquarters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturing/Assembly Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Single Location</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subsidiary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subsidiary Undefined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transportation Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warehousing Center</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DCCompanyId__c</fullName>
        <description>This field will store the Data.com API CompanyId which will then be used against Data.com DandBCompany object to get the details on Duns Level like Headquarter, Branch etc.</description>
        <label>DCCompanyId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNB_Subsidiary_Type__c</fullName>
        <description>Placeholder for future integrated field</description>
        <label>DNB Subsidiary Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DOT_Number__c</fullName>
        <label>DOT Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DUNS_HQ__c</fullName>
        <description>DUNS Headquarters Number</description>
        <label>DUNS HQ #</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Account Details Captured&quot;, &quot;Missing: &quot;&amp;IF( ISPICKVAL( Industry,&quot;&quot;),&quot;Industry, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(ISPICKVAL(Rating,&quot;&quot;), &quot;Rating, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(BillingCity) = 0, &quot;Complete Address, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(Phone) = 0, &quot;Phone, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL(Type,&quot;&quot;), &quot;Type&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF( ISPICKVAL(Industry,&quot;&quot;), 0,20) + IF( ISPICKVAL(Rating,&quot;&quot;), 0,20) + IF( LEN(BillingCity) = 0, 0,20) + IF(LEN(Phone) = 0, 0,20) + IF( ISPICKVAL(Type,&quot;&quot;), 0,20)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Data_Source_Key__c</fullName>
        <label>Data Source Key</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Data_Source__c</fullName>
        <label>Data Source</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distance_to_Ryder__c</fullName>
        <label>Driving distance to nearest Ryder branch</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Do_Not_Change_Owner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Change Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Domestic_Ultimate_DUNS__c</fullName>
        <description>Domestic Ultimate DUNS Number</description>
        <label>Domestic Ultimate DUNS #</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dummy_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dummy Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EDP1__BuySignals__c</fullName>
        <label>Total Buy Signals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EDP1__MostRecentActivityDate__c</fullName>
        <label>Most Recent Activity Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EDP1__MostRecentBuySignalDate__c</fullName>
        <label>Most Recent Buy Signal Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EDP1__TotalInboundActivity__c</fullName>
        <label>Total Inbound Activity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EDP1__TotalOpenOpportunities__c</fullName>
        <label>Total Open Opportunities</label>
        <summaryFilterItems>
            <field>Opportunity.IsClosed</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>EDP1__TotalOpportunities__c</fullName>
        <label>Total Opportunities</label>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ESP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>select batch of accounts that are needed to be identified separately and tracked</description>
        <label>ESP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Employee_Email__c</fullName>
        <label>Employee Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Employee_Name__c</fullName>
        <label>Employee Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Phone__c</fullName>
        <description>The phone number of the employee that comes from the employee leads</description>
        <label>Employee Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Employee_Zipcode__c</fullName>
        <description>The zip code of the employee that comes from the employee leads.</description>
        <label>Employee Zipcode</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enterprise_Account_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Create field on account object and put on page layout : &quot; Enterprise Account Manager&quot;
will be used to identify who is the Enterprise account manager for this account which is flagged as enterprise account</description>
        <label>Enterprise Account Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Equifax_City__c</fullName>
        <label>Equifax City</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Equifax_Company_Name__c</fullName>
        <label>Equifax Company Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Equifax_Country__c</fullName>
        <label>Equifax Country</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Equifax_Email__c</fullName>
        <label>Equifax Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Equifax_Fax__c</fullName>
        <label>Equifax Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Equifax_No__c</fullName>
        <description>To store the EquifaxNo</description>
        <label>Equifax No</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Equifax_Phone__c</fullName>
        <label>Equifax Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Equifax_State__c</fullName>
        <label>Equifax State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Equifax_Street1__c</fullName>
        <label>Equifax Street1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Equifax_Street2__c</fullName>
        <label>Equifax Street2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Equifax_Zip_Postal_Code__c</fullName>
        <label>Equifax Zip/Postal Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Executive_Sponsor_Nm__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Please indicate the executive sponsoring this account</inlineHelpText>
        <label>Executive Sponsor Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Executive_Sponsor_Program_ID__c</fullName>
        <label>Executive Sponsor Program ID</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Executive_Sponsor_Program__c</fullName>
        <inlineHelpText>Please indicate the year(s) this customer has been included in the VP Sponsor Program</inlineHelpText>
        <label>Executive Sponsor Program</label>
        <picklist>
            <picklistValues>
                <fullName>2012</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>2013</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>FMCSA_Total__c</fullName>
        <formula>FMCSA_leased_tractor_count__c + FMCSA_leased_truck_count__c + FMCSA_owned_tractor_count__c + FMCSA_owned_truck_count__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FMCSA Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FMCSA_leased_tractor_count__c</fullName>
        <label>FMCSA Leased Tractor Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FMCSA_leased_trailer_count__c</fullName>
        <label>FMCSA Leased Trailer Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FMCSA_leased_truck_count__c</fullName>
        <label>FMCSA Leased Truck Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FMCSA_owned_tractor_count__c</fullName>
        <label>FMCSA Owned Tractor Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FMCSA_owned_trailer_count__c</fullName>
        <label>FMCSA Owned Trailer Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FMCSA_owned_truck_count__c</fullName>
        <label>FMCSA Owned Truck Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL_Last_12_Months_Fixed_Cost_Perc__c</fullName>
        <label>FSL - Last 12 Months - Fixed Cost%</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FSL_Last_12_Months_Fixed_Cost__c</fullName>
        <label>FSL - Last 12 Months - Fixed Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL_Last_12_Months_Margin__c</fullName>
        <label>FSL_Last_12_Months_Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL_Last_12_Months_Rated_Cost_Perc__c</fullName>
        <label>FSL - Last 12 Months - Rated Cost%</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FSL_Last_12_Months_Rated_Cost__c</fullName>
        <label>FSL - Last 12 Months - Rated Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL_Life_to_Date_Fixed_Cost_Perc__c</fullName>
        <label>FSL - Life to Date - Fixed Cost%</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FSL_Life_to_Date_Fixed_Cost__c</fullName>
        <label>FSL - Life to Date - Fixed Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL_Life_to_Date_Margin_Perc__c</fullName>
        <label>FSL - Life to Date - Margin%</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FSL_Life_to_Date_Margin__c</fullName>
        <label>FSL - Life to Date - Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL_Life_to_Date_Rated_Cost__c</fullName>
        <label>FSL - Life to Date - Rated Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL_Life_to_Date_Revenue__c</fullName>
        <label>FSL - Life to Date - Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Family_Company_Name__c</fullName>
        <description>Used for grouping companies. Provide many to many relationship support between accounts and family companies.</description>
        <label>Family Company Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Family_Company_Owner_id_del__c</fullName>
        <label>Family Company Owner ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Family_Company_id__c</fullName>
        <label>Family Company ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Maintenance_Manager2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Field Maintenance Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts_for_FMM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Field_Maintenance_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Field Maintenance Manager</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <value>0016000000YgYI8</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Finance_Company_Used__c</fullName>
        <label>Finance Company Used</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FleetSeek__c</fullName>
        <label>FleetSeek RIN No</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FleetSeek_total__c</fullName>
        <label>Fleet Seek Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fleet_Ownership_Type__c</fullName>
        <label>Fleet Ownership Type</label>
        <picklist>
            <picklistValues>
                <fullName>100% Lease Competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100% Ownership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100% Ryder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete Mixed Fleet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mixed Ownership Lease Competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mixed Ownership Ryder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mixed Ryder/ Lease Competition</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Food_Beverage_Industry__c</fullName>
        <formula>IF(SIC_Code__r.Food_Beverage_Industry__c, &apos;True&apos;,&apos;False&apos;)</formula>
        <label>Food &amp; Beverage Industry</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FormerCustomer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to indicate customer is current or former</description>
        <label>Former Customer</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>